# eRCaGuy_Linux_Windows_CMake_Sockets_MSYS2

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.sh  cmake_configure_and_build.sh  make_portable.sh  unittests.cmake
src/: README.md  main_client.cpp  main_client_unittest.cpp  main_server.cpp  main_server_unittest.cpp  platform.h
test/: README.md
